--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 	<head>
-		<title>KiwiOrbit</title>
+		<title>Placeholder</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
