--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 
 			<div class="icon">
-				<a class="website" href="https://kiwiorbit.com"></a>
+				<a class="website" href="https://github.com/MealTeamSixNZ/hangman"></a>
 			</div>
 		</div>
 	</body>
