Update index.html to redirect to hangman page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 
 			<div class="icon">
-				<a class="latestProject" href="https://github.com/MealTeamSixNZ/hangman"></a>
+				<a class="latestProject" href="hangman.html"></a>
 			</div>
 		</div>
 	</body>
