--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 
 			<div class="icon">
-				<a class="latestProject" href="hangman.html"></a>
+				<a class="latestProject" href="https://railshangman.onrender.com/"></a>
 			</div>
 		</div>
 	</body>
